--- a/gui/src/main/resources/io/github/manami/gui/controller/recommendations_tab.fxml
+++ b/gui/src/main/resources/io/github/manami/gui/controller/recommendations_tab.fxml
@@ -9,35 +9,52 @@
 
 <AnchorPane id="AnchorPane" fx:id="anchor" maxHeight="-1.0" maxWidth="-1.0" minHeight="-1.0" minWidth="-1.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="io.github.manami.gui.controller.RecommendationsController">
    <children>
-       <ScrollPane id="scrollPane" fx:id="scrollPaneList" fitToWidth="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+       <ScrollPane id="scrollPane" fx:id="scrollPaneList" fitToHeight="true" fitToWidth="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
            <padding>
                <Insets left="10.0" right="10.0" />
            </padding>
-          <content>
-              <BorderPane prefHeight="-1.0" prefWidth="-1.0">
-                  <center>
-                      <VBox>
-                          <BorderPane.margin>
-                              <Insets />
-                          </BorderPane.margin>
-                         <children>
+         <content>
+            <VBox spacing="40.0">
+               <children>
+                  <VBox spacing="30.0">
+                     <children>
+                        <HBox>
+                           <children>
+                                  <Label text="Recommendations">
+                                      <font>
+                                          <Font name="System Bold" size="16.0" />
+                                      </font>
+                                  </Label>
+                              <Pane HBox.hgrow="ALWAYS" />
+                              <Button fx:id="btnExport" mnemonicParsing="false" onAction="#export" text="export" visible="false">
+                                 <HBox.margin>
+                                    <Insets />
+                                 </HBox.margin>
+                              </Button>
+                           </children>
+                        </HBox>
                              <Label text="Recommendations based on user recommendations on myanimelist.net. Sorted with highest priority on top.">
                                  <VBox.margin>
                                      <Insets bottom="30.0" />
                                  </VBox.margin>
                              </Label>
-                             <HBox alignment="CENTER">
-                                <children>
-                                    <Button fx:id="btnStart" defaultButton="true" mnemonicParsing="false" text="Start Search" />
-                                </children>
-                             </HBox>
-                             <VBox fx:id="vBoxProgress" alignment="CENTER" visible="false">
-                                <children>
-                              <HBox alignment="TOP_CENTER">
+                            <VBox alignment="CENTER">
+                               <children>
+                                    <Button fx:id="btnStart" defaultButton="true" mnemonicParsing="false" onAction="#start" text="Start Search" />
+                              <HBox fx:id="hBoxProgress" alignment="CENTER" visible="false">
                                  <children>
-                                    <VBox alignment="CENTER">
+                                    <VBox alignment="CENTER" spacing="5.0">
                                        <children>
-                                                <ProgressBar fx:id="progressBar" prefHeight="25.0" prefWidth="220.0" />
+                                          <HBox spacing="5.0">
+                                             <children>
+                                                      <ProgressBar fx:id="progressBar" prefHeight="25.0" prefWidth="220.0" />
+                                                      <Button cancelButton="true" mnemonicParsing="false" onAction="#cancel" text="Cancel">
+                                                          <VBox.margin>
+                                                              <Insets top="30.0" />
+                                                          </VBox.margin>
+                                                      </Button>
+                                             </children>
+                                          </HBox>
                                                 <Label fx:id="lblProgress" text="preparing">
                                                     <font>
                                                         <Font name="System Bold" size="11.0" />
@@ -45,55 +62,36 @@
                                                 </Label>
                                        </children>
                                     </VBox>
-                                          <Button fx:id="btnCancel" cancelButton="true" mnemonicParsing="false" visible="false">
-                                              <VBox.margin>
-                                                  <Insets top="30.0" />
-                                              </VBox.margin>
-                                       <HBox.margin>
-                                          <Insets left="10.0" />
-                                       </HBox.margin>
-                                          </Button>
                                  </children>
                               </HBox>
-                                </children>
-                             </VBox>
-                         </children>
-                      </VBox>
-                  </center>
-                  <bottom>
-                      <GridPane fx:id="gridPane" BorderPane.alignment="CENTER_LEFT">
-                          <columnConstraints>
-                              <ColumnConstraints hgrow="ALWAYS" maxWidth="230.0" minWidth="10.0" prefWidth="230.0" />
-                              <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-                              <ColumnConstraints hgrow="ALWAYS" minWidth="10.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                              <RowConstraints minHeight="10.0" vgrow="ALWAYS" />
-                          </rowConstraints>
-                          <BorderPane.margin>
-                              <Insets top="40.0" />
-                          </BorderPane.margin>
-                      </GridPane>
-                  </bottom>
-               <top>
-                  <BorderPane BorderPane.alignment="CENTER">
-                     <left>
-                            <Label text="Recommendations" BorderPane.alignment="CENTER">
-                                <font>
-                                    <Font name="System Bold" size="16.0" />
-                                </font>
-                                <BorderPane.margin>
-                                    <Insets bottom="25.0" right="10.0" top="10.0" />
-                                </BorderPane.margin>
-                            </Label>
-                     </left>
-                     <right>
-                        <Button fx:id="btnExport" mnemonicParsing="false" text="export" BorderPane.alignment="CENTER" />
-                     </right>
-                  </BorderPane>
-               </top>
-              </BorderPane>
-          </content>
+                               </children>
+                            </VBox>
+                     </children>
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <GridPane VBox.vgrow="ALWAYS">
+                    <columnConstraints>
+                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                    </columnConstraints>
+                    <rowConstraints>
+                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                    </rowConstraints>
+                     <children>
+                        <TableView fx:id="contentTable">
+                           <columnResizePolicy>
+                              <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                           </columnResizePolicy>
+                        </TableView>
+                     </children>
+                  </GridPane>
+               </children>
+               <padding>
+                  <Insets left="10.0" right="10.0" />
+               </padding>
+            </VBox>
+         </content>
        </ScrollPane>
    </children>
 </AnchorPane>
